--- a/GameDinoOffline-main/GameDinoOffline-main/index.html
+++ b/GameDinoOffline-main/GameDinoOffline-main/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <script src="lib/p5.js"></script>
-  <script src="lib/p5.dom.min.js"></script>
-  <script src="lib/p5.sound.min.js"></script>
-  <script src="lib/./p5.play.js"></script>
-  <script src="lib/matter.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+  <script src=https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js></script>
+  <script src="p5.play.js"></script>
 
 
   <link rel="stylesheet" type="text/css" href="style.css">
