--- a/GameDinoOffline-main/GameDinoOffline-main/index.html
+++ b/GameDinoOffline-main/GameDinoOffline-main/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
 
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-  <script src=https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js></script>
-  <script src="p5.play.js"></script>
+    <!-- Version 3 of p5play -->
+    <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
-  <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
-
-
-</head>
-
-<body>
-
-  <script src="sketch.js"></script>
-
-
-</body>
-
+  </head>
+  <body>
+    <main>
+    </main>
+      
+    <script src="sketch.js"></script>
+  </body>
 </html>
