some additions and modifications

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +18,7 @@
     <meta charset="utf-8" />
 
   </head>
-  <body>
-    <main>
-    </main>
-      
-    <script src="sketch.js"></script>
+  <body> 
+    <script src="/sketch.js"></script>
   </body>
 </html>
