--- a/static/index.html
+++ b/static/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- script imports -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
-
     <!-- Version 3 of p5play -->
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
-
+    <!--sounds-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+    <!--google api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
+    <!--style & fonts-->
+    <link href="/css/fonts.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!---->
     <meta charset="utf-8" />
-
   </head>
-  <body> 
+  <body>
     <script src="/sketch.js"></script>
   </body>
 </html>
