oh, I notice that the page doesn't have a title, so here is one

--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <!---->
     <meta charset="utf-8" />
+    <title>dino game</title>
   </head>
   <body>
     <script src="/sketch.js"></script>
