--- a/static/index.html
+++ b/static/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <!-- script imports -->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+    <script src="/script/p5.js"></script>
     <!-- Version 3 of p5play -->
     <script src="https://p5play.org/v3/planck.min.js"></script>
-    <script src="https://p5play.org/v3/p5play.js"></script>
     <!--sounds-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
     <!--google api-->
@@ -20,6 +18,6 @@
     <title>dino game</title>
   </head>
   <body>
-    <script src="/sketch.js"></script>
+    <script src="/script/sketch.js"></script>
   </body>
 </html>
