--- a/static/index.html
+++ b/static/index.html
@@ -5,17 +5,17 @@
     <script src="/script/p5.js"></script>
     <!-- Version 3 of p5play -->
     <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
     <!--sounds-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <!--google api-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--style & fonts-->
+    <!-- style & fonts -->
     <link href="/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <!---->
     <meta charset="utf-8" />
+    <!-- title bar -->
     <title>dino game</title>
+    <link id="page-ico" rel="icon" type="image/x-icon" href="/assets/dino.ico">
   </head>
   <body>
     <script src="/script/sketch.js"></script>
