--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- script imports -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
     <!-- Version 3 of p5play -->
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
