--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <script src="https://p5play.org/v3/p5play.js"></script>
     <!--sounds-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+    <!--style-->
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <!--google api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--style & fonts-->
-    <link href="/css/fonts.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
     <!---->
     <meta charset="utf-8" />
     <title>dino game</title>
