more css to project

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--style & fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
+    <link href="/css/fonts.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <!---->
     <meta charset="utf-8" />
+    <!-- title bar -->
     <title>dino game</title>
     <link id="page-ico" rel="icon" type="image/x-icon" href="/assets/dino.ico">
   </head>
