--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <link id="page-ico" rel="icon" type="image/x-icon" href="/assets/dino.ico">
   </head>
   <body>
-    <script src="/scripts/sketch.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
