works for GT PGs

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--style & fonts-->
-    <link href="/css/fonts.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link href="fonts.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!---->
     <meta charset="utf-8" />
     <!-- title bar -->
     <title>dino game</title>
-    <link id="page-ico" rel="icon" type="image/x-icon" href="/assets/dino.ico">
+    <link id="page-ico" rel="icon" type="image/x-icon" href="dino.ico">
   </head>
   <body>
     <script src="sketch.js"></script>
